Revision history for Perl extension Sys::CpuLoad

  - Maintenance taken over by Robert Rothenberg.

  [Enhancements]
  - Modernised code style.

  [Bug Fixes]
  - Fixed VERSION.

  [Incompatabilities]
  - Minimum version is v5.6.

  [Documentation]
  - Reformatted Changes to conform to CPAN::Changes::Spec.

  [Tests]
  - Modernised the test, and added a test of the load function.

  [Other]
  - Reorganised files for modern CPAN distributions.

0.03 Mon Mar 18 15:02:33 PST 2002
  - LC_NUMERIC patch from Victor Wagner
  - Added cache support to remember how we got the system load
  - Restricted getloadavg() to FreeBSD/OpenBSD for now

0.02 Sun Feb 17 23:43:26 PST 2002
  - bsd getloadavg() support with help from Dmitry Dorofeev

0.01 Wed Aug 11 15:44:55 PDT 1999
  - original version; created by h2xs 1.16